# image-search-demo

./: .dockerignore  .env  .gitignore  Makefile  README.md  docker-compose.yml  go.work  go.work.sum  pyproject.toml  version
.devcontainer/: devcontainer.json
cdnapi/: .gitignore  go.mod  go.sum
cdnapi/cmd/cdnapid/: main.go
cdnapi/config/: config.go
cdnapi/docs/: docs.go  swagger.json  swagger.yaml
cdnapi/handler/api/: health.go  image.go
cdnapi/model/: model.go
cdnapi/router/: router.go
cdnapi/service/: image.go
conf/: cdnapi.yaml  ingestapi.yaml  ingestworker.yaml
docker/: Dockerfile.cdnapi  Dockerfile.frontend  Dockerfile.ingestapi  Dockerfile.ingestworker  Dockerfile.ingestworker.cpu  Dockerfile.searchapi  Dockerfile.searchapi.cpu
docker/traefik/: traefik.yml
frontend/: config.yaml  index.html
frontend/js/: main.js
frontend/js/api/: searchApi.js
frontend/js/config/: defaultConfig.js  loadConfig.js
frontend/js/lib/: http.js  yamlLite.js
frontend/js/ui/: dom.js  renderResults.js
frontend/nginx/: default.conf
ingestapi/: container.py
ingestapi/api/: router.py
ingestapi/api/v1/routes/: ingest.py
ingestapi/config/: config.py
ingestapi/service/: ingest.py
ingestworker/: container.py  main.py
ingestworker/config/: config.py
ingestworker/repo/: __init__.py  image.py
ingestworker/service/: ingest.py
ingestworker/task/: ingest.py
pkg/: go.mod  go.sum
pkg/config/: config.go  milvus.go  storage.go
pkg/storage/: s3.go  storage.go
shared/: pyproject.toml
shared/shared/ai/: encode.py  feature.py
shared/shared/config/: __init__.py  config.py  milvus.py  s3.py
shared/shared/constant/: __init__.py
shared/shared/http_client/: index.py
shared/shared/model/: index.py
shared/shared/repo/: milvus.py
shared/shared/storage/: __init__.py  s3.py
