[project]
name = "image-search-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "shared",
    "ingestworker",
    "ingestapi",
    "searchapi"
]

[project.optional-dependencies]
cpu = [
    "ingestworker[cpu]",
    "searchapi[cpu]",
    "shared[torch-cpu]",
]
gpu = [
    "ingestworker[gpu]",
    "searchapi[gpu]",
    "shared[torch-gpu]",
]

[tool.uv]
package = false

conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]

[tool.uv.workspace]
members = [
    "shared",
    "ingestworker",
    "ingestapi",
    "searchapi",
]

[tool.uv.sources]
shared = { workspace = true }
ingestworker = { workspace = true }
ingestapi = { workspace = true }
searchapi = { workspace = true }