[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.74",
    "httpx>=0.28.1",
    "orjson>=3.11.4",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-json-logger>=4.0.0",
    "pyyaml>=6.0.3",
]

# Allows multiple torch sources while preventing conflicts
[project.optional-dependencies]
torch-cpu = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.25.0)",
]
torch-gpu = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.25.0)"
]

[tool.uv]
conflicts = [
    [
        { extra = "torch-cpu" },
        { extra = "torch-gpu" },
    ],
]
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "torch-cpu" },
    { index = "pytorch-cu130", extra = "torch-gpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "torch-cpu" },
    { index = "pytorch-cu130", extra = "torch-gpu" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"